# alps-house-finder

./: .gitignore  Makefile  README.md
.github/workflows/: deploy.yml
data/communes/: _schema.md  aime-la-plagne.yaml  allos-la-foux.yaml  araches-la-frasse-les-carroz.yaml  areches-beaufort.yaml  auris-en-oisans.yaml  aussois.yaml  bonneval-sur-arc.yaml  bourg-saint-maurice.yaml  briancon.yaml  chamonix-mont-blanc.yaml  champagny-en-vanoise.yaml  courchevel-saint-bon.yaml  fontcouverte-la-toussuire.yaml  hauteluce.yaml  huez-alpe-d-huez.yaml  isola.yaml  la-clusaz.yaml  la-grave.yaml  la-plagne-tarentaise.yaml  la-salle-les-alpes-villeneuve.yaml  landry.yaml  le-monetier-les-bains.yaml  les-allues-meribel.yaml  les-avanchers-valmorel.yaml  les-belleville-st-martin.yaml  les-contamines-montjoie.yaml  les-deux-alpes.yaml  les-houches.yaml  les-orres.yaml  manigod.yaml  modane-valfrejus.yaml  molines-en-queyras.yaml  montgenevre.yaml  montvalezan-la-rosiere.yaml  morillon.yaml  nevache.yaml  (+33 more)
scrapers/: pyproject.toml
scrapers/alpsfinder/: cli.py  communes.py  db.py  dedupe.py  export.py  http.py  ingest.py  models.py  schema.sql  str_market.py  trends.py
scrapers/alpsfinder/adapters/: __init__.py  base.py  bienici.py  greenacres.py  notaires.py  seloger.py
scrapers/alpsfinder/scoring/: engine.py  renovation.py  weights_default.yaml
scrapers/tests/: test_bienici_parser.py
scrapers/tests/fixtures/: bienici_samoens.json
scripts/: com.alpsfinder.refresh.plist  daily-refresh.sh  generate_communes.py
web/: package-lock.json  package.json  tsconfig.tsbuildinfo
(+19 files in other folders)
