[project]
name = "alpsfinder"
version = "0.1.0"
description = "French Alps property scout: scrape listings, score against criteria, rank"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.32",
    "beautifulsoup4>=4.12",
    "pyyaml>=6.0",
    "click>=8.1",
    "rapidfuzz>=3.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
alpsfinder = "alpsfinder.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["alpsfinder"]
